--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,20 @@
 name: First Workflow
 
 on: 
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      env:
+        description: "Select env value"
+        required: true
+        type: choice
+        options:
+          - production
+          - staging
+          - testing
+        default: staging
 jobs:
-  examble-job:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Print Welcome Message
-        run: echo "Welcome to our first workflow action"
-      - name: Checkout repository
-        uses: actions/checkout@v4.2.2
-      - name: Print list files
-        run: ls -la
-        
+      - name: Deploy
+        run: echo "Print the value of evironemet ${{ inputs.env }}"
